<resources>
    <string name="app_name">TestTool</string>
    <string name="action_settings">Impostazioni</string>
    <string name="first_fragment_label">Primo Fragment</string>
    <string name="second_fragment_label">Secondo Fragment</string>
    <string name="next">Successivo</string>
    <string name="previous">Precedente</string>
    <string name="hello_first_fragment">Ciao primo fragment</string>
    <string name="hello_second_fragment">Ciao secondo fragment. Arg: %1$s</string>
    <string name="title_activity_editor2">EditorActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifiche</string>
    <string name="hello_blank_fragment">Ciao fragment vuoto</string>
    <string name="button">Bottone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi o registrati</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">"Benvenuto!"</string>
    <string name="invalid_username">Nome utente non valido</string>
    <string name="invalid_password">La password deve avere 5+ caratteri</string>
    <string name="login_failed">"Accesso non riuscito"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="appwidget_text">Esempio</string>
    <string name="add_widget">Aggiungi widget</string>
    <string name="app_widget_description">Questa è la descrizione di un widget dell\'app</string>
    <string-array name="days_array">
        <item>Days</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mounth_array">
        <item>Mounth</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_array">
        <item>Years</item>
        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="specialization_guida">
        <item>Specialization</item>
        <item>eta moderna</item>
        <item>eta contemporanea</item>
        <item>medioevo</item>
        <item>eta antica</item>
        <item>architettura contemporanea</item>
        <item>oriente</item>
        <item>egitto</item>
    </string-array>
    <string-array name="tipo_zona_curatore">
        <item>Tipo zona</item>
        <item>museo</item>
        <item>area archeologica</item>
        <item>mostra itinerante</item>
    </string-array>
    <string name="e_culture_tool" translatable="false">E-Culture Tool</string>
    <string name="area_personale" translatable="false">Area Personale</string>
    <string name="visite_utente" translatable="false">Visite Utente</string>
    <string name="visita" translatable="false">Visita </string>
    <string name="logout_conferma" translatable="false">Vuoi effetturare il logout?</string>
    <string name="logout_testo" translatable="false">Logout</string>
    <string name="creazione_non_riuscita" translatable="false">Errore: Impossibile creare dati.</string>
    <string name="lettura_dati_non_riuscita" translatable="false">Errore: Impossibile leggere dati.</string>
    <string name="aggiornamento_non_riuscito" translatable="false">Errore: Impossibile aggiornare dati.</string>
    <string name="eliminazione_non_riuscita" translatable="false">Errore: Impossibile eliminare dati.</string>
    <string name="cambio_dati_no_validi" translatable="false">Non è avenuto nessun cambio dati,
        verifica che i valori siano validi.</string>
    <string name="server_no_risponde" translatable="false">Il server non risponde.</string>
    <string name="visita_eliminata_successo" translatable="false">Visita eliminata con successo!</string>
    <string name="zona_eliminata_successo" translatable="false">Zona eliminata con successo!</string>
    <string name="opera_eliminata_successo" translatable="false">Opera eliminata con successo!</string>
    <string name="area_eliminata_successo" translatable="false">Area eliminata con successo!</string>
    <string name="visitatore_eliminato_successo" translatable="false">Visitatore eliminato con successo!</string>
    <string name="curatore_eliminato_successo" translatable="false">Curatore eliminato con successo!</string>
    <string name="guida_eliminata_successo" translatable="false">Guida eliminata con successo!</string>
    <string name="impossibile_ottenere_luogo" translatable="false">Errore: Impossibile ottenere luogo.</string>
    <string name="benvenuto_welcome" translatable="false">Benvenuto!</string>
    <string name="cominciamo_welcome" translatable="false">Cominciamo</string>
    <string name="error_logging_in" translatable="false">Errore durante il login</string>
    <string name="bentornato_login" translatable="false">Bentornato </string>
    <string name="successo_result_login" translatable="false">Successo[data= </string>
    <string name="errore_result_login" translatable="false">Errore[exception= </string>
    <string name="account_inesistente" translatable="false">Errore: Account inesistente.</string>
    <string name="accedi" translatable="false">Accedi</string>
    <string name="registrati" translatable="false">Registrati</string>
    <string name="scegli_utente_predefinito" translatable="false">Scegli uno degli utenti predefiniti:</string>
    <string name="curatore_default" translatable="false">ACCOUNT CURATORE - PER TEST</string>
    <string name="visitatore_default" translatable="false">ACCOUNT VISITATORE - PER TEST</string>
    <string name="guida_default" translatable="false">ACCOUNT GUIDA - PER TEST</string>
    <string name="chi_sei" translatable="false">Chi sei?</string>
    <string name="id_visita" translatable="false">ID Visita:</string>
    <string name="data" translatable="false">Data:</string>
    <string name="id_guida" translatable="false">ID Guida:</string>
    <string name="luogo" translatable="false">Luogo:</string>
    <string name="descrizione" translatable="false">Descrizione:</string>
    <string name="grafo_visita" translatable="false">Visualizza Grafo</string>
    <string name="modifica_grafo_visita" translatable="false">Modifica Grafo</string>
    <string name="elimina_visita" translatable="false">Elimina Visita</string>
    <string name="scegli_guida" translatable="false">Scegli Guida</string>
    <string name="dati_visita" translatable="false">Dati Visita</string>
    <string name="scegli_guida_testo" translatable="false">Scegli una guida per la tua visita</string>
    <string name="testo_dopo_guida" translatable="false">Una volta scelta la guida, clicca su Ok
    per confermare la tua scelta. Potrai modificarla premendo nuovamente
        sul bottone "Scegli Guida".</string>
    <string name="crea_visita" translatable="false">Crea una visita</string>
    <string name="scegli_luogo_visita" translatable="false">Scegli il luogo dove effettuare la visita:</string>
    <string name="conferma_luogo" translatable="false">Conferma Luogo</string>
    <string name="creazione_visita_testo" translatable="false">Una volta selezionato il luogo per la
        visita, clicca sul bottone seguente per crearla: una volta cliccato il bottone, la visita viene creata
        all\'interno del database senza dover cliccare ulteriori bottoni.</string>
    <string name="oops" translatable="false">OOPS!</string>
    <string name="no_internet" translatable="false">Nessuna connessione ad Internet!</string>
    <string name="controlla_connessione" translatable="false">Controlla la tua connessione</string>
    <string name="riprova" translatable="false">Riprova</string>
</resources>