<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/scegli_guida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scegli_guida"
            android:textSize="26sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/text_scegli_guida"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/scegli_guida_testo"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:id="@+id/spinner_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/text_after_guida_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/testo_dopo_guida"
            android:textSize="12sp"
            android:layout_marginTop="13dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>