<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreaVisita">

    <LinearLayout
        android:id="@+id/linear_crea_visita_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarCreaVisita"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:elevation="4dp"
            />

    <FrameLayout
        android:id="@+id/frameCreaVisita"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_crea_visita"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_titolo_crea_visita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crea_visita"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/text_scegli_luogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/scegli_luogo_visita"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spinner_scegli_luogo"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:popupBackground="@android:color/white" />

            <TextView
                android:id="@+id/testo_creazione_visita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/creazione_visita_testo" />

            <Button
                android:id="@+id/btn_conferma_luogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToEditorAfterLuogo"
                android:text="@string/conferma_luogo"
                android:background="@drawable/login_btn"
                android:textColor="@color/white"/>
        </LinearLayout>
    </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>