<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameVIsualizzaGrafo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alto"
    tools:context=".VisualizzaVisite.FragmentSingolaVisita">

    <ScrollView
        android:id="@+id/scroll_singola_visita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_areapc"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_login_panel"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_dati_visita"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:text="@string/dati_visita"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="2"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_visita"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:text="@string/id_visita"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_luogo"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:text="@string/luogo"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_data"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:text="@string/data"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_guida"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:text="@string/id_guida"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/txt_numero_visita"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:text="Cose"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/txt_luogo_visita"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:text="Cose"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/txt_data_visita"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="3dp"
                        android:text="Cose"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/txt_guida_visita"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="Cose"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_descrizione"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descrizione_visita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descrizione"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_descrizione_visita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor sium incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis sium exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modifica_visita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/login_btn"
                        android:drawableTop="@drawable/ic_baseline_create_24"
                        android:onClick="avviaGrafoModifica"
                        android:text="@string/modifica_grafo_visita" />

                    <Button
                        android:id="@+id/scegli_guida"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_btn"
                        android:drawableTop="@drawable/ic_baseline_flag_24"
                        android:onClick="scegliGuida"
                        android:text="@string/scegli_guida"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_visualiz_grafo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:onClick="avviaGrafoVisualizza"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/login_btn"
                        android:drawableTop="@drawable/ic_baseline_account_tree_24"
                        android:text="@string/grafo_visita" />

                    <Button
                        android:id="@+id/btn_elimina_visita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_btn"
                        android:drawableTop="@drawable/ic_baseline_delete_forever_24"
                        android:onClick="eliminaVisitaSingola"
                        android:text="@string/elimina_visita"
                        android:textColor="@color/white" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

